[package]
name = "flowre_chrome_native_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrome_native_messaging = { git = "https://github.com/neon64/chrome-native-messaging", branch = "master" }
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }